# diagram_generator

./: .env  .gitignore  Dockerfile  README.md  chainlit_app.py  docker-compose.yml  env.example  main.py  pyproject.toml  test_llm_response.py
.cursor/rules/: ddd-cqrs-ioc-patterns.mdc
diagram_service/: __main__.py  chainlit_app.py  main.py
diagram_service/agents/: chat_agent.py  diagram_agent.py
diagram_service/api/: models.py  routes.py
diagram_service/application/: __init__.py
diagram_service/application/commands/: generate_diagram_command.py
diagram_service/application/dtos/: diagram_dtos.py
diagram_service/application/queries/: get_diagram_query.py
diagram_service/application/services/: diagram_application_service.py
diagram_service/domain/: __init__.py
diagram_service/domain/aggregates/: diagram.py
diagram_service/domain/entities/: diagram_connection.py  diagram_node.py
diagram_service/domain/events/: diagram_events.py
diagram_service/domain/repositories/: diagram_repository.py
diagram_service/domain/services/: diagram_generation_service.py
diagram_service/domain/value_objects/: diagram_id.py  node_type.py
diagram_service/infrastructure/: __init__.py
diagram_service/infrastructure/config/: container.py
diagram_service/infrastructure/persistence/: in_memory_diagram_repository.py
diagram_service/llm/: gemini_client.py  mock_client.py
diagram_service/presentation/: __init__.py
diagram_service/presentation/controllers/: diagram_controller.py
diagram_service/tools/: diagram_tools.py
tests/: test_diagram_tools.py  test_llm_integration.py
tests/mocks/: mock_client.py
